src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Tipo_Pratica__c</fullName>
        <label>Tipo Pratica</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipologia__c</fullName>
        <label>Tipologia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tracking_Speed__c</fullName>
        <label>Tracking Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valore_Merce__c</fullName>
        <label>Valore_Merce</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>Approval_Process_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Step 1</label>
        <queue>Step_1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Case_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Case</label>
        <queue>Case</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.MILESTONE_STATUS</columns>
        <columns>CASES.MILESTONE_STATUSICON</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Step_2_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Step 2</label>
        <queue>Step_2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Step_3_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Step 3</label>
        <queue>Step_3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Trial_Activities</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Trial</value>
        </filters>
        <label>Trial Activities</label>
    </listViews>
    <recordTypes>
        <fullName>Generico</fullName>
        <active>true</active>
        <businessProcess>Generico</businessProcess>
        <description>Generico</description>
        <label>Generico</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Controllo_Dettaglio</fullName>
        <active>true</active>
        <description>Controllo del dettaglio relativo al prodotto per il seguente caso.</description>
        <errorConditionFormula>Genera_RMA__c = TRUE
&amp;&amp; ISPICKVAL(Dettaglio__c, &quot;114&quot;)

&amp;&amp;(
 Product.Consenso_Recesso__c = FALSE
|| NOT( ISBLANK( Partita_Iva__r.Partita_Iva__c  )) 
|| TODAY() - Data_Consegna__c &gt; 30 
)</errorConditionFormula>
        <errorMessage>Questo prodotto non ha il diritto di recesso.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Motivo_11</fullName>
        <active>false</active>
        <description>motivo di contatto 11</description>
        <errorConditionFormula>AND(ISPICKVAL(Motivo_di_Contatto__c,&apos;11&apos;),
 TEXT(Data_Ricevimento_Merce__c) = &quot;&quot;
||  (Email_Inviata__c) = FALSE
||  (Email_Inviata__c)                = FALSE
||  TEXT(Importo_Fattura_a_Corriere__c)   = &quot;&quot;
||  TEXT(Motivo_Rifiuto__c)               = &quot;&quot;
||  (Note_Interne__c)                 = &quot;&quot;
||  (Pratica_Corriere__c)             = &quot;&quot;
||  (Protocollo__c)                   = &quot;&quot;
||  (Punto_Vendita_di_Origine__c)     = &quot;&quot;
||  TEXT(Richiedente__c)                  = &quot;&quot;
||  (Riserva_Corriere__c)             = FALSE
||  TEXT(Stato_Contestazione__c)          = &quot;&quot;
||  TEXT(StatoHelper__c)                  = &quot;&quot;
||  TEXT(Tipologia__c)                    = &quot;&quot;
||  (Persona_da_Contattare__c)        = &quot;&quot;
||  (Genera_RMA__c)                   = FALSE)</errorConditionFormula>
        <errorMessage>Si prega gentilmente di riempire tutti i campi appropriati.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Motivo_12</fullName>
        <active>false</active>
        <description>motivo di contatto 12</description>
        <errorConditionFormula>AND(ISPICKVAL(Motivo_di_Contatto__c,&apos;12&apos;),
(Field1__c) = &quot;&quot;
|| (Field2__c) = &quot;&quot;)</errorConditionFormula>
        <errorMessage>Si prega gentilmente di riempire tutti i campi appropriati.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Motivo_21</fullName>
        <active>false</active>
        <description>motivo di contatto 21</description>
        <errorConditionFormula>AND(ISPICKVAL(Motivo_di_Contatto__c,&apos;21&apos;),
 TEXT(Preventivo__c) = &quot;&quot;
|| TEXT(Percentuale_Buono__c) = &quot;&quot;
|| (Tracking_Speed__c) = &quot;&quot;
|| (Spedizioniere__c) = &quot;&quot;
|| (Richiedi_Preventivo__c) = FALSE
|| (Intervento_non_ancora_fatturato__c) = FALSE
|| (Ritiro_Presso__c) = &quot;&quot;
|| (Riparatore__c) = &quot;&quot;
|| (Prodotto__c) = &quot;&quot;
|| TEXT(Stato_Tracking__c) = &quot;&quot;)</errorConditionFormula>
        <errorMessage>Si prega gentilmente di riempire tutti i campi appropriati.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Motivo_22</fullName>
        <active>false</active>
        <description>motivo di contatto 22</description>
        <errorConditionFormula>AND(ISPICKVAL(Motivo_di_Contatto__c,&apos;22&apos;),
(Possesso__c) = FALSE
||  (Codice_Prodotto__c) = &quot;&quot;)</errorConditionFormula>
        <errorMessage>Si prega gentilmente di riempire tutti i campi appropriati.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Motivo_23</fullName>
        <active>false</active>
        <description>motivo di contatto 23</description>
        <errorConditionFormula>AND(ISPICKVAL(Motivo_di_Contatto__c,&apos;23&apos;),
(Email_Cliente__c) = &quot;&quot;
||(Numero_Fattura__c) = &quot;&quot;)</errorConditionFormula>
        <errorMessage>Si prega gentilmente di riempire tutti i campi appropriati.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Motivo_24</fullName>
        <active>false</active>
        <description>motivo di contatto 24</description>
        <errorConditionFormula>AND(ISPICKVAL(Motivo_di_Contatto__c,&apos;24&apos;),
(Codice_Prodotto__c) = &quot;&quot;
|| (Marca__c) = &quot;&quot;
)</errorConditionFormula>
        <errorMessage>Si prega gentilmente di riempire tutti i campi appropriati.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Motivo_31</fullName>
        <active>false</active>
        <description>motivo di contatto 31</description>
        <errorConditionFormula>AND(ISPICKVAL(Motivo_di_Contatto__c,&apos;31&apos;),
(Ordine__c) = &quot;&quot;
|| (AccountId) = &quot;&quot;
|| (OwnerId) = &quot;&quot;)</errorConditionFormula>
        <errorMessage>Si prega gentilmente di riempire tutti i campi appropriati.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Motivo_32</fullName>
        <active>false</active>
        <description>motivo di contatto 32</description>
        <errorConditionFormula>AND(ISPICKVAL(Motivo_di_Contatto__c,&apos;32&apos;),
(Numero_Fattura__c) = &quot;&quot;
|| (Codice_Garanzia__c) = &quot;&quot;)</errorConditionFormula>
        <errorMessage>Si prega gentilmente di riempire tutti i campi appropriati.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Motivo_41</fullName>
        <active>false</active>
        <description>motivo di contatto 41</description>
        <errorConditionFormula>AND(ISPICKVAL(Motivo_di_Contatto__c,&apos;41&apos;), 
 TEXT(RMA_Accredito__c		         ) = &quot;&quot;
|| (RMA_All_attenzione_di__c	     ) = &quot;&quot;
|| TEXT(RMA_Causale__c	                 ) = &quot;&quot;
|| (Codice_Prodotto__c	             ) = &quot;&quot;
|| (RMA_Codice_CAT__c		         ) = &quot;&quot;
|| (RMA_Codice_Fornitore__c		     ) = &quot;&quot;
|| (RMA_Codice_Unieuro__c		     ) = &quot;&quot;
|| TEXT(RMA_Date_DDF__c	                 ) = &quot;&quot;
|| TEXT(RMA_Data_Entrata__c	             ) = &quot;&quot;
|| TEXT(RMA_Data_Invio_CAT__c		     ) = &quot;&quot;
|| TEXT(RMA_Data_Rientro_CAT__c		     ) = &quot;&quot;
|| (Fornitore__c	                 ) = &quot;&quot;
|| TEXT(RMA_Data_RMA__c		             ) = &quot;&quot;
|| TEXT(RMA_Data_Scontrino__c	         ) = &quot;&quot;
|| TEXT(RMA_Data_Uscita__c	             ) = &quot;&quot;
|| (RMA_Descrizione_Articolo__c	     ) = &quot;&quot;
|| (RMA_Dettaglio_Problema__c		 ) = &quot;&quot;
|| TEXT(RMA_Genere_Problema__c	         ) = &quot;&quot;
|| TEXT(RMA_Giacenza__c	                 ) = &quot;&quot;
|| TEXT(RMA_Numero_RMA_PdV__c	         ) = &quot;&quot;
|| TEXT(RMA_Numero_RMA_Web__c		     ) = &quot;&quot;
|| (RMA_Invio_CAT__c	             ) = &quot;&quot;
|| (RMA_Materiale_Diffettoso__c	     ) = &quot;&quot;
|| ISPICKVAL(RMA_Note_Gestione__c,&quot;&quot;)
|| (RMA_Note_INTERNE_SGM__c) = &quot;&quot;
|| (RMA_Note_SGM__c) = &quot;&quot;
|| (RMA_Notifiche_Cliente__c	         ) = &quot;&quot;
|| (RMA_Persona_di_Riferimento__c	 ) = &quot;&quot;
|| (RMA_Precodice__c	             ) = &quot;&quot;
|| TEXT(RMA_Quantita__c	                 ) = &quot;&quot;
|| TEXT(RMA_Richiedente__c	             ) = &quot;&quot;
|| (RMA_Rientro_CAT__c		         ) = &quot;&quot;
|| TEXT(RMA_Stato_Gestione_RMA__c	     ) = &quot;&quot;
|| TEXT(RMA_Stato_Richiesta_RMA__c		 ) = &quot;&quot;
|| TEXT(RMA_Stato_Richiesta_RMA_Old__c	 ) = &quot;&quot;
|| (RMA_Uscita__c	                 ) = &quot;&quot;
|| (Persona_da_Contattare__c	     ) = &quot;&quot;
|| (ContactId                        ) = &quot;&quot; )</errorConditionFormula>
        <errorMessage>Si prega gentilmente di riempire tutti i campi appropriati.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Motivo_99</fullName>
        <active>false</active>
        <description>motivo di contatto 99</description>
        <errorConditionFormula>AND(ISPICKVAL(Motivo_di_Contatto__c,&apos;99&apos;), 
(Codice_Prodotto__c) = &quot;&quot; 
|| (Note__c) = &quot;&quot; 
|| (Parent.ParentId ) = &quot;&quot; 
)</errorConditionFormula>
        <errorMessage>Si prega gentilmente di riempire tutti i campi appropriati.</errorMessage>
    </validationRules>
</CustomObject>